--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,7 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: rgb(31, 31, 31);
+  color: white;
+  font-family: Calibri;
 }
