--- a/src/components/ItemListContainer/itemlistcontainer.css
+++ b/src/components/ItemListContainer/itemlistcontainer.css
@@ -12,9 +12,23 @@
   flex-basis: 20%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   margin-bottom: 50px;
 }
 .image-item{
   border-radius: 5px;
+}
+.content-item{
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+}
+.button-item{
+  width: 100px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  background-color: rgb(61, 61, 61);
 }
