--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+
 body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(31, 31, 31);
   color: white;
-  font-family: Calibri;
+  font-family: "Reddit Sans", sans-serif;
+  font-style: normal;
 }
