--- a/src/components/NavBar/cartwidget.css
+++ b/src/components/NavBar/cartwidget.css
@@ -2,7 +2,15 @@
   display: flex;
   align-items: center;
   padding: 0 40px;
+  color: white;
 }
 .cartwidget .number{
   padding: 0 5px;
+}
+
+.cart-red{
+  color: red;
+}
+.cart-blue{
+  color: blue;
 }
