--- a/src/components/NavBar/cartwidget.css
+++ b/src/components/NavBar/cartwidget.css
@@ -3,14 +3,15 @@
   align-items: center;
   padding: 0 40px;
   color: white;
+  text-decoration: none;
 }
 .cartwidget .number{
   padding: 0 5px;
 }
 
 .cart-red{
-  color: red;
+  color: rgb(255, 255, 255);
 }
 .cart-blue{
-  color: blue;
+  color: rgba(255, 255, 255, 0.527);
 }
