--- a/src/components/ItemDetailContainer/itemDetail.css
+++ b/src/components/ItemDetailContainer/itemDetail.css
@@ -20,3 +20,13 @@
 .text-detail{
   font-size: 20px;
 }
+.button-cart{
+  color: white;
+  background-color: rgb(61, 61, 61);
+  border: none;
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  padding: 10px 25px;
+  text-decoration: none;
+}
