--- a/src/components/ItemListContainer/itemlistcontainer.css
+++ b/src/components/ItemListContainer/itemlistcontainer.css
@@ -1,34 +1,34 @@
-.item-list-container{
+.item-list-container {
   padding: 10px 50px;
 }
-.title-item-list-container{
+.title-item-list-container {
   padding-bottom: 20px;
 }
-.item-list{
+.item-list {
   display: flex;
   flex-wrap: wrap;
 }
-.item{
-  flex-basis: 20%;
+.item {
+  flex-basis: 13%;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: start;
-  margin-bottom: 50px;
+  margin: 0 50px;
+  margin-bottom: 100px;
+  scale: 1;
+  transition: 0.3s ease-in-out;
 }
-.image-item{
+.item:hover {
+  scale: 1.1;
+  transition: 0.3s ease-in-out;
+  box-shadow: 0px 1px 24px 12px rgba(158, 158, 158, 0.75);
+  -webkit-box-shadow: 0px 1px 24px 12px rgba(173, 173, 173, 0.75);
+  -moz-box-shadow: 0px 1px 24px 12px rgba(172, 172, 172, 0.75);
+}
+.image-item {
   border-radius: 5px;
-}
-.content-item{
-  display: flex;
-  flex-direction: column;
-  font-size: 18px;
-}
-.button-item{
-  width: 100px;
-  text-align: center;
-  padding: 10px;
-  border-radius: 5px;
-  color: white;
-  text-decoration: none;
-  background-color: rgb(61, 61, 61);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
